--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dev_dependencies:
   uuid: ^3.0.4
   shared_preferences: ^2.0.13
   intl: ^0.18.0
+  flutter_local_notifications: ^12.0.0
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
